--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@
     border-bottom:4px solid #fff;
 }
 
-.itiraf-yaz button{
+.navbar-collapse button{
     font-size: 18px !important;
     width: 200px;
 }
